force-app/main/default/objects/Product2/fields/Fake_Store_Category_Id__c.field-meta.xml
<CustomField>
    <fullName>Fake_Store_Category_Id__c</fullName>
    <label>Fake Store Category ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>