force-app/main/default/objects/Product2/fields/Fake_Store_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Fake_Store_Image_URL__c</fullName>
    <label>Fake Store Image URL</label>
    <type>Url</type>
</CustomField>