force-app/main/default/objects/Product2/fields/Fake_Store_Price__c.field-meta.xml
<CustomField>
    <fullName>Fake_Store_Price__c</fullName>
    <label>Fake Store Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>