force-app/main/default/objects/Product2/fields/Proposed_Changes__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Changes__c</fullName>
    <label>Proposed Changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>