force-app/main/default/objects/Product2/fields/QC_Approver__c.field-meta.xml
<CustomField>
    <fullName>QC_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QC Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Products_To_Approve</relationshipName>
    <type>Lookup</type>
</CustomField>